Cutting branches for revision 218